@@ -1,33 +1,31 @@
 package com.ec.order.service;
 
 import com.ec.order.client.CatalogClient;
-import com.ec.order.dto.order.CheckoutRequest;
-import com.ec.order.dto.order.CheckoutItem;
-import com.ec.order.dto.order.ProductVariantForOrderDTO;
-import com.ec.order.dto.order.VnPayPaymentCreateForm;
+import com.ec.order.dto.order.*;
 import com.ec.order.entity.*;
 import com.ec.order.exceptions.business.order.OrderNotFoundException;
 import com.ec.order.exceptions.business.order.OrderOutOfStockException;
 import com.ec.order.exceptions.business.payment.PaymentNotFoundException;
-import com.ec.order.integration.redis.RedisConstants;
 import com.ec.order.integration.redis.RedisService;
 import com.ec.order.repository.OrderRepository;
 import com.ec.order.repository.OrderStatusRepository;
 import com.ec.order.repository.PaymentRepository;
 import com.ec.order.repository.VnPayPaymentRepository;
+import com.ec.order.specification.OrderSpecification;
 import com.ec.order.utils.IdGenerator;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
 @Service
@@ -57,8 +55,48 @@ public class OrderServiceImpl implements OrderService {
 	}
 	
 	@Override
+	public Page<OrderAdminListDto> getAllOrders(
+	    String keyword,
+	    String status,
+	    String paymentMethod,
+	    LocalDate fromDate,
+	    LocalDate toDate,
+	    Pageable pageable) {
+		Specification<Order> spec = Specification.where(null);
+		
+		if (keyword != null && !keyword.isBlank()) {
+			spec = spec.and(OrderSpecification.keywordMatch(keyword));
+		}
+		
+		if (status != null) {
+			spec = spec.and(OrderSpecification.hasLatestStatus(status));
+		}
+		
+		if (paymentMethod != null) {
+			spec = spec.and(OrderSpecification.hasPaymentMethod(paymentMethod));
+		}
+		
+		if (fromDate != null) {
+			spec = spec.and(OrderSpecification.fromDate(fromDate));
+		}
+		
+		if (toDate != null) {
+			spec = spec.and(OrderSpecification.toDate(toDate));
+		}
+		
+		Page<Order> orders = orderRepository.findAll(spec, pageable);
+		return orders.map(OrderAdminListDto::fromEntity);
+	}
+	
+	@Override
 	public Order getOrderDetailById(String orderId, String accountId) {
 		return orderRepository.findByIdAndAccountId(orderId, accountId)
+		    .orElseThrow(() -> new OrderNotFoundException(orderId));
+	}
+	
+	@Override
+	public Order getOrderDetailById(String orderId) {
+		return orderRepository.findById(orderId)
 		    .orElseThrow(() -> new OrderNotFoundException(orderId));
 	}
 	
@@ -70,6 +108,7 @@ public class OrderServiceImpl implements OrderService {
 		
 		// 2. Lấy thông tin variant
 		List<ProductVariantForOrderDTO> variantInfos = catalogClient.getVariantDetails(rawItems);
+		
 		// 3. Map số lượng từ client
 		Map<String, Integer> quantityMap = rawItems.stream()
 		    .collect(Collectors.toMap(CheckoutItem::getProductVariantId, CheckoutItem::getQuantity));
@@ -81,6 +120,7 @@ public class OrderServiceImpl implements OrderService {
 		for (ProductVariantForOrderDTO variant : variantInfos) {
 			String variantId = variant.getProductVariantId();
 			int quantity = quantityMap.get(variantId);
+			
 			if (quantity > variant.getQuantity()) {
 				throw new OrderOutOfStockException(variant.getProductName(), variant.getQuantity(), quantity);
 			}
@@ -89,7 +129,7 @@ public class OrderServiceImpl implements OrderService {
 			totalAmount = totalAmount.add(total);
 			
 			OrderDetail detail = OrderDetail.builder()
-			    .productVariantId(variant.getProductVariantId())
+			    .productVariantId(variantId)
 			    .productName(variant.getProductName())
 			    .productThumbnail(variant.getThumbnail())
 			    .productVolume(variant.getVolume())
@@ -101,7 +141,7 @@ public class OrderServiceImpl implements OrderService {
 			orderDetails.add(detail);
 		}
 		
-		// 5–9. Tạo Order, Payment, Status, save DB, giảm tồn kho (giữ nguyên logic cũ)
+		// 5. Tạo Order entity
 		Order order = Order.builder()
 		    .accountId(accountId)
 		    .receiverName(request.getReceiverName())
@@ -110,32 +150,38 @@ public class OrderServiceImpl implements OrderService {
 		    .note(request.getNote())
 		    .orderTime(LocalDateTime.now())
 		    .totalAmount(totalAmount)
-		    .orderDetails(orderDetails)
+		    .isTemp(false)
 		    .build();
 		
+		// 6. Gắn order vào các chi tiết
 		orderDetails.forEach(detail -> detail.setOrder(order));
+		order.setOrderDetails(orderDetails);
 		
+		// 7. Tạo Payment (OneToOne)
 		Payment payment = Payment.builder()
+		    .id(IdGenerator.generateId()) // nếu bạn cần ID riêng
 		    .paymentMethod(Payment.PaymentMethod.COD)
 		    .paymentStatus(Payment.PaymentStatus.PENDING)
 		    .order(order)
 		    .build();
+		order.setPayment(payment); // OneToOne
 		
-		order.setPayments(List.of(payment));
-		
+		// 8. Tạo OrderStatus
 		OrderStatus status = OrderStatus.builder()
 		    .status(OrderStatus.OrderStatusEnum.PENDING)
 		    .order(order)
 		    .build();
-		
 		order.setStatuses(List.of(status));
 		
+		// 9. Lưu tất cả vào DB (Cascade sẽ tự lưu orderDetails, payment, statuses)
 		orderRepository.save(order);
 		
+		// 10. Gọi catalogClient giảm tồn kho
 		catalogClient.reduceQuantities(rawItems);
 		
 		return order.getId();
 	}
+
 	
 	
 	@Override
@@ -162,8 +208,9 @@ public class OrderServiceImpl implements OrderService {
 			    .unitPrice(variant.getUnitPrice())
 			    .quantity(quantity)
 			    .totalPrice(total)
+			    .order(null) // gán sau
 			    .build();
-		}).collect(Collectors.toList());
+		}).toList();
 		
 		// 4. Tạo Order entity
 		Order order = Order.builder()
@@ -184,20 +231,22 @@ public class OrderServiceImpl implements OrderService {
 		
 		// 6. Tạo Payment ban đầu
 		Payment payment = Payment.builder()
+		    .id(IdGenerator.generateId()) // nếu bạn cần ID riêng
 		    .paymentMethod(Payment.PaymentMethod.VNPAY)
 		    .paymentStatus(Payment.PaymentStatus.PENDING)
 		    .order(order)
 		    .build();
 		
-		// 7. Gắn Payment vào Order (nếu dùng quan hệ 1-n)
-		order.setPayments(List.of(payment));
+		// 7. Gắn payment vào order (OneToOne)
+		order.setPayment(payment);
 		
-		// 8. Lưu vào DB
-		orderRepository.save(order); // cascade sẽ tự lưu luôn orderDetails và payment
+		// 8. Lưu vào DB (cascade tự lưu hết)
+		orderRepository.save(order);
 		
 		return order;
 	}
-
+	
+	
 	@Override
 	@Transactional
 	public Order processVnPayReturn(VnPayPaymentCreateForm form) {
